@@ -317,7 +317,7 @@ webapp.enable_autolink
                     addresses in quote bodies into hyperlinks. This feature is
                     still sort of experimental, but should work fine.
 
-If you enable the captcha feature, you will need to define some of the following
+If you enable the captcha feature, you may need to define some of the following
 values as well. You may want to turn the feature off at first, so you can
 test-drive Chirpy!'s other features before trying captcha support.
 
