@@ -39,6 +39,8 @@
   <content:encoded> and <xhtml:body>, making feedvalidator.org like it more
 * News body on start page is now divided into paragraphs; opening and closing
   tag are included, so update your templates
+* More sensible defaults for captchas: simply webapp.enable_captchas=1 should
+  now work in most cases
 * Bugfix: live rating no longer throws a JavaScript error in IE
 * Bugfix: quote rating up log entry now includes quote ID (#1493589)
 * Just for fun, quote IDs can now be in binary and hex notation too, as per
